make sure we align svg as middle, even this is handled by the browser from before

--- a/packages/dnb-ui-lib/src/components/icon/style/_icon.scss
+++ b/packages/dnb-ui-lib/src/components/icon/style/_icon.scss
@@ -17,6 +17,7 @@
   svg {
     width: inherit;
     height: inherit;
+    vertical-align: middle;
   }
 
   // auto size
